# asv_navigation

./: CMakeLists.txt  package.xml
config/: global_map_config.yaml  global_map_config.yaml.bak  local_map_config.yaml  local_planner.yaml  move_base.yaml
launch/: phase2_navigation.launch
scripts/: goal_talker.py
