<?xml version="1.0"?>
<package format="2">
  <name>asv_navigation</name>
  <version>0.1.0</version>
  <description>The asv_navigation package</description>
  <maintainer email="akashp1997@gmail.com">Akash Purandare</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>move_base</build_depend>
  <build_depend>asv_controls</build_depend>
  <build_depend>asv_localization</build_depend>
  <build_depend>asv_description</build_depend>
  <build_depend>teb_local_planner</build_depend>
  
  <exec_depend>move_base</exec_depend>
  <exec_depend>asv_controls</exec_depend>
  <exec_depend>asv_localization</exec_depend>
  <exec_depend>asv_description</exec_depend>
  <exec_depend>teb_local_planner</exec_depend>

</package>
